Change Authentication Flow to allow only email [remove] Devices Table and Model
