# app/Http/Requests/CreateUserRequest.php
@@ -25,10 +25,15 @@ class CreateUserRequest extends FormRequest
     {
         return [
             'name' => ['required'],
-            'username' => ['required'],
-            'email' => ['nullable'],
-            'password' => ['required', 'confirmed'],
-            'password_confirmation' => ['required']
+            // 'username' => ['required'],
+            'email' => ['required'],
+            // 'password' => ['required', 'confirmed'],
+            // 'password_confirmation' => ['required'],
+            'manufacturer' => ['required'],
+            'os' => ['required'],
+            'version' => ['nullable'],
+            'language' => ['nullable'],
+            'token' => ['required']
         ];
     }
 
@@ -39,6 +44,7 @@ class CreateUserRequest extends FormRequest
      */
     public function data()
     {
-        return $this->only('name', 'username', 'email', 'password', 'is_valid');
+        // return $this->only('name', 'username', 'email', 'password', 'is_valid');
+        return $this->only('name', 'email', 'manufacturer', 'os', 'version', 'language', 'token');
     }
 }
